[tool.poetry]
name = "interstellar-maze"
version = "0.1.0"
description = ""
authors = ["Tang Wei <tw7613781@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7.2"
eth-brownie = "1.16.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
